syntax = "proto3";
package com.classes.grpc;

service Sum {
    // compute the sum
    rpc SimpleSum (Request) returns (Response) {}

    rpc RepeatedSum (RepeatedRequest) returns (stream Response) {}

    rpc StreamSum (stream Request) returns (stream Response) {}
}
// The request message containing the the numbers to be sum
message Request {
    int32 first = 1;
    int32 second = 2;
}
// The response message containing the sum of the two numbers
message Response {
    int32 result= 1;
}
//The request message containing two numbers to be sum and the number of time the server must computes it.
message RepeatedRequest{
    int32 num = 1;
    int32 numberOfRepetitions = 2;
}